--- a/resumedetector/templates/view_resume.html
+++ b/resumedetector/templates/view_resume.html
@@ -1,4 +1,4 @@
-{% extends 'recruitment_dashboard.html' %}
+{% extends 'dashboard.html' %}
 {% block content %}
 <section class="content">
     <div class="container-fluid">
