--- a/resumedetector/templates/admin_login.html
+++ b/resumedetector/templates/admin_login.html
@@ -25,7 +25,7 @@
     <div class="card-body login-card-body">
       <p class="login-box-msg"></p>
 
-      <form action="{% url 'login' %}" method="post">
+      <form action="{% url 'admin_login' %}" method="post">
         {% csrf_token %}
         <div class="input-group mb-3">
           <input type="email" class="form-control" name="email" placeholder="Email">
