--- a/resumedetector/templates/dashboard.html
+++ b/resumedetector/templates/dashboard.html
@@ -111,6 +111,40 @@
            
           </li>
          
+          <li class="nav-item">
+            <a href="{% url 'view_users' %}" class="nav-link">
+              <i class="nav-icon fas fa-table"></i>
+              <p>
+                View Users
+            
+              </p>
+            </a>
+           
+          </li>
+
+          <li class="nav-item">
+            <a href="{% url 'view_recruiters' %}" class="nav-link">
+              <i class="nav-icon fas fa-table"></i>
+              <p>
+                View Recruiters
+            
+              </p>
+            </a>
+           
+          </li>
+
+
+          <li class="nav-item">
+            <a href="{% url 'admin_logout' %}" class="nav-link">
+              <i class="nav-icon fas fa-table"></i>
+              <p>
+                Log Out
+            
+              </p>
+            </a>
+           
+          </li> 
+
 
         </ul>
       </nav>
@@ -132,8 +166,8 @@
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Home</a></li>
-              <li class="breadcrumb-item"><a href="{% url 'register' %}">Register</a></li>
-              <li class="breadcrumb-item"><a href="{% url 'login' %}">Login</a></li>
+              <!-- <li class="breadcrumb-item"><a href="{% url 'register' %}">Register</a></li> -->
+              <!-- <li class="breadcrumb-item"><a href="{% url 'login' %}">Login</a></li> -->
          
             </ol>
           </div><!-- /.col -->
@@ -401,13 +435,7 @@
   <!-- /.control-sidebar -->
 
   <!-- Main Footer -->
-  <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-    All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 3.2.0
-    </div>
-  </footer>
+  
 </div>
 <!-- ./wrapper -->
 
